<resources>
    <string name="app_name">SecondAssignment</string>
    <string name="asynctaskbtn">AsyncTask</string>
    <string name="processbutton">Process</string>
    <string name="servicebtn">Service</string>
    <string name="start_btn">Start</string>
    <string name="stop_ptn">Stop</string>
    <string name="status">Status</string>
    <string name="content_provider">Content Provider</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="last_assignment">Last Assignment!</string>
    <string name="battery_level">Battery Level</string>
</resources>