<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5ED4DE"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/asynctask"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:backgroundTint="#D15B36"
        android:text="@string/asynctaskbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/service"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:backgroundTint="#009688"
        android:text="@string/servicebtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/contentProvider"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:backgroundTint="#BC9A2E"
        android:text="@string/content_provider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/prodcastReceiver"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:backgroundTint="#BF81CA"
        android:text="@string/broadcast_receiver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="281dp"
        android:layout_height="113dp"
        android:gravity="center"
        android:text="@string/last_assignment"
        android:textColor="#E91E63"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

</androidx.constraintlayout.widget.ConstraintLayout>